# pre-commit-hooks

./: .pre-commit-hooks.yaml  LICENSE  Pipfile  pyproject.toml  setup.cfg
pre_commit_hooks/: __init__.py  recode_to_utf8.py
