[metadata]
name = pre-commit-hooks
version = attr: pre_commit_hooks.__version__
description = pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
author = attr: pre_commit_hooks.__author__
author_email = attr: pre_commit_hooks.__author_email__
url = attr: pre_commit_hooks.__url__
license = MIT
license_file = LICENSE

[options]
packages = find:
python_required = >=3.7
install_requires =
    beautifulsoup4

[options.entry_points]
console_scripts =
    recode-to-utf8 = pre_commit_hooks.recode_to_utf8:main
